# pycql2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yaml  tests.yaml
pycql2/: cql2.lark  cql2_pydantic.py  cql2_transformer.py  utils.py
tests/: test_cql2_pydantic.py  test_ogcapi_features.py  test_pycql2.py  test_pycql2_hypothesis.py  test_utils.py
tests/bad_data/json/: bad01.json
tests/bad_data/text/: bad01.txt
tests/data/json/: example55.json  filter01.json  filter02.json  filter03.json  filter04.json  filter05.json  filter06.json  filter07.json  filter08.json  filter09.json  filter10.json  filter11.json  filter12.json  filter13.json  filter14.json  filter15.json  filter16.json  filter17.json  filter18.json  filter19.json  filter20.json  filter21.json  filter22.json  filter23.json  filter24.json  filter25.json  filter26.json  filter27.json  filter28.json  filter29.json  filter30.json  filter31.json  filter32.json  filter33.json  filter34.json  filter35.json  filter36.json  filter37.json  filter38.json  filter39.json  (+22 more)
tests/data/text/: example16.txt  filter03.txt  filter04.txt  filter05.txt  filter06.txt  filter09.txt  filter10-alt01.txt  filter10.txt  filter15-alt01.txt  filter15.txt  filter16-alt01.txt  filter16.txt  filter20.txt  filter26.txt  filter32.txt  filter35.txt  filter39.txt  filter53.txt  filter54.txt  filter59.txt  filter60-alt01.txt  filter60.txt  filter61-alt01.txt  filter61.txt
