[tool.poetry]
name = "pycql2"
version = "0.1.0"
description = "Pydantic models for OGC cql2-json and parser for cql2-text."
readme = "README.md"
authors = ["Erik Seglem <erik.seglem@gmail.com>"]
include = ["pycql2/cql2.lark"]
repository = "https://github.com/eseglem/pycql2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Pydantic :: 1",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
geojson-pydantic = "^0.5.0"
lark = "^1.0.0"

pytest = {version = ">=7.2", optional = true}
coverage = {version = ">=7.2", optional = true, extras = ["toml"]}
pytest-cov = {version = ">=4.0", optional = true}
hypothesis = {version = ">=6.68.2", optional = true}
black = {version = ">=23.1.0", optional = true}
ruff = {version = ">=0.0.254", optional = true}
mypy = {version = ">=1.1.0", optional = true}
isort = {version = ">=5.12.0", optional = true}
pre-commit = {version = ">=3.1.1", optional = true}

[tool.poetry.extras]
dev = ["black", "ruff", "mypy", "pre-commit", "isort"]
test = ["pytest", "coverage", "pytest-cov", "hypothesis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
    "E501", # Black handles line length
]

[tool.coverage.run]
source = ["pycql2"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = 3.8
show_error_codes = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
